button mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -925,8 +925,9 @@ Mobile Media Query
         font-size: .4em;
     }
 
-    #dd.wrapper-dropdown-2 { width: 120px; font-size: .4em; }
-    #dd2.wrapper-dropdown-2 { width: 120px; font-size: .4em; }
+    #dd.wrapper-dropdown-2, #dd2.wrapper-dropdown-2 { display: none; }
+
+    .scrollArrow { display: none; }
 
     h1 { font-size: 2.5em; }
 
